# stripe-support-agent

./: .env.example  .gitignore  CLAUDE.md  LEARNINGS.md  PHASES.MD  ReadME.md  docker-compose.yml  pyproject.toml
.claude/learnings/: 01-project-scafflod.md  02-docs-loader.md  03-chunker.md  04-embedder.md
.claude/phases/: current.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
.claude/plans/: 01-project-scaffold.md  02-docs-loader.md  03-chunker.md  04-embedder.md  05-vectorstore.md  09-ingest-endpoint.md
.claude/specs/: 01-project-scafflod.md  02-docs-loader.md  03-chunker.md  04-embedder.md  05-vectorstore.md  06-generator-and-cli.md  07-fastapi-skeleton.md  08-ask-endpoint.md  09-ingest-endpoint.md  10-health-endpoints.md  11-structured-logging.md  12-request-response-schemas.md
src/: __init__.py  ask.py  config.py  ingest.py
src/api/: __main__.py  app.py  middleware.py
src/api/routes/: ask.py  health.py  ingest.py
src/rag/: __init__.py  chunker.py  embedder.py  generator.py  loader.py  vectorstore.py
tests/: test_api_app.py  test_ask_route.py  test_chunker.py  test_embedder.py  test_generator.py  test_health_routes.py  test_ingest_route.py  test_loader.py  test_middleware.py  test_vectorstore.py
